[B] Fix text-wrapping in search filters
Resolves #2209

Applies `text-overflow: ellipsis` for supporting browsers (Safari,
Firefox).

--- a/client/src/theme/styles/components/global/forms/_list-filter.scss
+++ b/client/src/theme/styles/components/global/forms/_list-filter.scss
@@ -153,8 +153,11 @@
         height: $inputHeight;
         padding-right: 32px;
         padding-left: 13px;
+        overflow: hidden;
         font-size: 14px;
         color: $neutral50;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         border: 2px solid $neutral30;
         transition: border-color $duration $timing;
 
